# flow-orchestration

./: .gitignore  Makefile  README.md  executions_storage.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  workflow.db  workflows.db  workflows_storage.json
cli/: main.py
cli/commands/: __init__.py  copilot.py  plugin.py  state.py  workflow.py
core/: __init__.py  config.py
core/agent/: __init__.py  base.py  checkpoint.py  context.py  dependencies.py  state.py
core/api/rest/: app.py  execution_monitor.py  models.py  workflow_editor.py
core/coordination/: __init__.py  coordinator.py  deadlock.py  primitives.py  rate_limiter.py
core/dag/: __init__.py  assets.py  builder.py  executor.py  graph.py  parser.py  templates.py
core/dag/templates/: state_function.py.j2  workflow.py.j2  workflow_test.py.j2
core/execution/: __init__.py  determinism.py  engine.py  lifecycle.py  replay.py
core/generator/: __init__.py  cli.py  discovery.py  engine.py  parser.py
core/generator/templates/: README.md.j2  config.yaml.j2  docker-compose.yml.j2  env.template.j2  run.py.j2  workflow.py.j2
core/generator/templates/integrations/: generic.py.j2
core/generator/templates/utils/: helpers.py.j2  logging.py.j2
core/monitoring/: __init__.py  alerts.py  events.py  metrics.py  telemetry.py
core/resources/: __init__.py  allocation.py  pool.py  quotas.py  requirements.py
core/scheduler/: __init__.py  base.py  cron.py  event.py  queue.py
core/storage/: events.py  interface.py
core/storage/backends/: sqlite.py
core/visual/: engine.py  flow.py  nodes.py
core/workflow/: __init__.py  flow.py  integrations.py  node.py  visual.py
enterprise/ai/: flow_copilot.py  openrouter_api.py  plugin_discovery.py
enterprise/ai/prompts/: workflow.py
enterprise/ai/providers/: openrouter.py
examples/: dag_example.py  example-workflow.yaml  integration_workflow.py  simple_workflow.yaml  test_demo_workflow.py  yaml_example.py
examples/basic/: full_context_workflow.py  simple_workflow.py
generated-email_processor/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py
generated-email_processor/config/: config.yaml
generated-email_processor/integrations/: gmail.py  slack.py
generated-email_processor/workflow/: __init__.py  main.py
generated-email_processor/workflow/agent/: __init__.py  agent.py
generated-email_processor/workflow/plugins/: __init__.py  base.py
generated-email_processor/workflow/plugins/gmail/: __init__.py  manifest.yaml  states.py
generated-email_processor/workflow/plugins/slack/: __init__.py  manifest.yaml  states.py
generated-email_processor/workflow/utils/: helpers.py  logging.py
plugins/: base.py  node_registry.py  registry.py
plugins/gmail/: __init__.py  manifest.yaml  states.py
plugins/openai/: __init__.py  manifest.yaml  states.py
plugins/slack/: __init__.py  manifest.yaml  states.py
plugins/webhook/: __init__.py  manifest.yaml  states.py
scripts/: setup_plugins.py
tests/: conftest.py  debug_test_prompts.py  demo_workflow.yaml  test_prompts.py  test_realistic_workflow_orchestration.py  test_standalone_prompt.py  test_workflow_orchestration.py
tests/unit/: test_base.py  test_checkpoint.py  test_context.py  test_coordinator.py  test_deadlock.py  test_primitives.py  test_rate_limiter.py
ui/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: Dashboard.tsx  ExecutionMonitor.tsx  Layout.tsx  OverviewTab.tsx  VisualWorkflowDesigner.tsx  WorkflowCreator.tsx  WorkflowDesigner.tsx  WorkflowFlowChart.tsx  WorkflowList.tsx  WorkflowYamlCreator.tsx
ui/src/store/: workflow.ts
ui/src/types/: workflow.ts
ui/src/utils/: download.ts  yamlUtils.ts
worker/: cli.py  runner.py
